--- a/production/tables_dynamic.html
+++ b/production/tables_dynamic.html
@@ -161,15 +161,14 @@
                     <table class="table table-striped table-hover projects" id="meeting">
                       <thead>
                         <tr>
-                          <th style="width: 1%">#</th>
                           <th style="width: 20%">회의 주제</th>
                           <th style="width: 20%">회의 일시</th>
                           <th>회의 참여자</th>
-                        </tr>
+                          <th style="width: 8%; text-align: center;">시작/참가</th>
+                       </tr>
                       </thead>
                       <tbody id=meetingBody>
                         <tr>
-                          <td>#</td>
                           <td>
                             <a>회의 주제 1번입니다.</a>
                           </td>
@@ -198,7 +197,6 @@
                           </td>
                         </tr>
                         <tr>
-                          <td>#</td>
                           <td>
                             <a>회의 주제 2번입니다.</a>
                           </td>
@@ -218,7 +216,6 @@
                           </td>
                         </tr>
                         <tr>
-                          <td>#</td>
                           <td>
                             <a>회의 주제 3번입니다.</a>
                           </td>
@@ -320,7 +317,6 @@
                 var date = new Date(data[i].date);
                 var tr = `
                   <tr>
-                    <td>#</td>
                     <td>${data[i].mname}</td>
                     <td><small>${date.getFullYear()+"-"+date.getMonth()+"-"+date.getDate()+" "+date.getHours()+":"+date.getMinutes()}</small></td>
                     <td>
@@ -328,8 +324,33 @@
                       ${list_inline}
                     </ul>
                     </td>
-                  </tr>
                 `
+                if(data[i].made.unum == unum) {
+                  tr += `
+                    <td style="text-align: center;">
+                      <!-- 최의 개최자일 경우 btn-info 클래스 -->
+                      <!-- 버튼의 링크는 해당 회의 정보가 들어가있는 회의 시작화면 -->
+                      <button type="button" onclick="startMeeting('${data[i]["_id"]}')" class="btn btn-info btn-xs">시작</button>
+                    </td>
+                  </tr>
+                  `
+                } else if(data[i].start == true){
+                  tr += `
+                    <td style="text-align: center;">
+                      <!-- 회의 참가자일경우 btn-dark 클래스 -->
+                      <button type="button" onclick="location.href='project_detail.html'" class="btn btn-dark btn-xs">참가</button>
+                    </td>
+                  </tr>
+                  `
+                } else if(data[i].start == false){
+                  tr += `
+                    <td style="text-align: center;">
+                      <!-- 회의 시작 시간 전 - 버튼 속성 disabled -->
+                      <button type="button" disabled onclick="location.href='project_detail.html'" class="btn btn-dark btn-xs">참가</button>
+                    </td>
+                  </tr>
+                  `
+                }
                 meetTable.append(tr);
               }
             }
@@ -337,6 +358,26 @@
           .fail(function () {
             alert('fail');
           });
+      }
+
+      function startMeeting(mid){
+        alert(mid);
+
+        var settings = {
+          crossDomain: true,
+          url: "https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/meet/start?mid="+mid,
+          type: "GET",
+          contentType: "application/json"
+        }
+
+        $.ajax(settings)
+          .done(function (response) {
+            window.location.replace("project_detail.html");
+          })
+          .fail(function () {
+            alert('fail');
+          });
+
       }
     </script>
 
