--- a/production/index.html
+++ b/production/index.html
@@ -135,22 +135,8 @@
         <!-- page content -->
         <div class="right_col" role="main">
           <!-- top tiles -->
-          <div class="row tile_count">
-            <div class="col-md-4 col-sm-4 col-xs-6 tile_stats_count text-center">
-              <span class="count_top"><i class="fa fa-clock-o"></i> 위젯 이름</span>
-              <div class="count">2</div>
-              <span class="count_bottom"><button type="button" onclick="location.href='tables_dynamic.html'" class="btn btn-link btn-xs"> 링크 Go!</button></span>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-6 tile_stats_count text-center">
-              <span class="count_top"><i class="fa fa-clock-o"></i> 오늘 예정된 회의</span>
-              <div class="count">2</div>
-              <span class="count_bottom"><button type="button" onclick="location.href='tables_dynamic.html'" class="btn btn-link btn-xs"> 회의 예약리스트 Go!</button></span>
-            </div>
-            <div class="col-md-4 col-sm-4 col-xs-6 tile_stats_count text-center">
-              <span class="count_top"><i class="fa fa-clock-o"></i> 위젯 이름</span>
-              <div class="count">2</div>
-              <span class="count_bottom"><button type="button" onclick="location.href='tables_dynamic.html'" class="btn btn-link btn-xs"> 링크 Go!</button></span>
-            </div>
+          <div class="row tile_count" id="widget">
+            <!-- widget -->
           </div>
           <!-- /top tiles -->
 
@@ -222,8 +208,49 @@
         var mid = "5bb07e5f5fb2b0661d0f6e8b";
       }
       $(document).ready(function(){
+        printWidget();
         printMeetingInfo();
       });
+
+      function printWidget() {
+
+        var date = new Date();
+        date.addHours(9);
+        var settings = {
+          crossDomain: true,
+          url: "https://kz2hltyjb2.execute-api.ap-northeast-2.amazonaws.com/test/dashboard",
+          type: "POST",
+          contentType: "application/json",
+          data: `{
+            "unum": ${unum},
+            "date": "${date.toISOString()}"
+          }`
+        }
+        $.ajax(settings)
+          .done(function (response) {
+            console.log(response)
+              var div = `
+              <div class="col-md-4 col-sm-4 col-xs-6 tile_stats_count text-center">
+                <span class="count_top"><i class="fa fa-clock-o"></i> 나의 참여도</span>
+                <div class="count">${response.personal_rate}%</div>
+              </div>
+              <div class="col-md-4 col-sm-4 col-xs-6 tile_stats_count text-center">
+                <span class="count_top"><i class="fa fa-clock-o"></i> 오늘 예정된 회의</span>
+                <div class="count">${response.today}</div>
+                <span class="count_bottom"><button type="button" onclick="location.href='tables_dynamic.html'" class="btn btn-link btn-xs"> 회의 예약리스트 Go!</button></span>
+              </div>
+              <div class="col-md-4 col-sm-4 col-xs-6 tile_stats_count text-center">
+                <span class="count_top"><i class="fa fa-clock-o"></i> 바로 참여하기</span>
+                <span class="count_bottom"><button type="button" onclick="location.href='project_detail.html?mid=${response.near}'" class="btn btn-link"> 링크 Go!</button></span>
+              </div>
+            `
+            $("#widget").append(div);
+            })
+            .fail(function () {
+              alert('fail');
+            });
+      }
+
       function printMeetingInfo() {
         var settings = {
           crossDomain: true,
